add initial html setup of form and user input.

--- a/index.html
+++ b/index.html
@@ -13,12 +13,16 @@
       <div class="jumbotron">
         <h1>Base Converter</h1>
       </div>
-      <form id="leap-form">
+      <form id="number-form">
         <div class="form-group">
-          <label for="year">Enter a number to convert to Binary</label>
-          <input id="year" type="text" class="form-control">
+          <label for="number">Enter a number to convert</label>
+          <input id="number" type="text" class="form-control">
         </div>
-        <button type="submit" class="btn">Find out!</button>
+        <div class="form-group">
+          <label for="base">Enter a base to convert to</label>
+          <input id="base" type="text" class="form-control">
+        </div>
+        <button type="submit" class="btn">Convert</button>
       </form>
       <div id="result">
       </div>
